<resources>
    <string name="app_name">Topface</string>
    <string name="app_locale">en_US</string>
    <string name="photofeed_title">Put in the feed</string>
    <string name="general_warning">WARNING</string>
    <string name="general_ok">OK</string>
    <string name="general_any">Any</string>
    <string name="general_settings_abbr">Sett.</string>
    <string name="general_disallow">Forbid</string>
    <string name="general_allow">Allow</string>
    <string name="notification_denied_popup_title">Allow Notifications so you can find out about new messages, likes, and other news.</string>
    <string name="notification_popup_title">Allow us to send you Notifications so you will instantly find out about new Likes, Adorations and Messages.</string>
    <string name="email_successfully_changed">Your email was successfully changed.</string>
    <string name="auth_vk_name">VK</string>
    <string name="dating_switch_button">More…</string>
    <string name="dating_prev_button">Previous</string>
    <string name="dating_chat_button">Chat</string>
    <string name="waiting_a_products">Please wait, we\'re loading our available products</string>
    <string name="likes_background_text">No likes</string>
    <string name="visitors_background_text">No guests</string>
    <string name="chat_background_text">No incoming messages</string>
    <string name="entrance">Enter</string>
    <string name="filter_only_online">Online only</string>
    <string name="filter_city_age_parameters">Age and city</string>
    <string name="filter_select_city">Select city</string>
    <string name="edit_block_photo">Photos</string>
    <string name="dashbrd_popup_rating">Like our app? Raise our rating! The higher the rating, the more people you\'ll meet on Topface!</string>
    <string name="dashbrd_popup_title">Rate me</string>
    <string name="dashbrd_popup_cancel">Don\'t ask me again</string>
    <string name="dashbrd_popup_rate">Rate</string>
    <string name="dashbrd_popup_later">Ask later</string>
    <string name="buying_store_connect">Connecting to the iTunes Store</string>
    <string name="buying_store_purchase">Processing purchase in the iTunes Store</string>
    <string name="buying_tf_ack_sending">Sending purchase info to Topface</string>
    <string name="ok_label">Odnoklassniki</string>
    <string name="autorefill">Auto refill</string>
    <string name="coins">Coins</string>
    <string name="photo_info_deleted">Deleted</string>
    <string name="settings_block_main">Main</string>
    <string name="settings_block_additional">Additional</string>
    <string name="leaders_select_photo">Select an impressive photo:</string>
    <string name="locking_screen_button_answer">Respond</string>
    <string name="locking_screen_advice">Respond to all incoming Likes</string>
    <string name="locking_screen_advice2">Get Unrestricted Access</string>
    <string name="general_bookmarks_is_deleted">User deleted from favorites</string>
    <string name="general_blacklist_is_deleted">User has been deleted from the Blacklist</string>
    <string name="invite_friends_title_short">Invite all friends to Topface</string>
    <string name="general_bookmarks_add_short">To favorites</string>
    <string name="general_complaint">Complain</string>
    <string name="general_type_complain">Subject of complaint</string>
    <string name="address_book_access_error">This app does not have access to your contacts. You can allow access via the Privacy Settings of your device.</string>
    <string name="profile_deleted_user">User has been deleted</string>
    <string name="filter_main_parameters">I am interested in</string>
    <string name="dating_prev_button_ext">Previous</string>
    <string name="dating_skip_button_ext">Next</string>
    <string name="profile_services">Services</string>
    <string name="black_list_add">Add to the Blacklist</string>
    <string name="vip_invisible_mode">Invisibility Mode</string>
    <string name="buying_profile_coins">Your account</string>
    <string name="vip_info_title">VIP Privileges</string>
    <string name="profile_gifts_empty">No one has sent any gifts to this user yet.</string>
    <string name="profile_mygifts_empty">No one has sent gifts to you yet.</string>
    <string name="dating_people_unnoticed">You took no notice of 10 people!</string>
    <string name="dating_continue">Continue dating</string>
    <string name="dating_better_look">Get a better look!\nYou might be missing your chance!</string>
    <string name="edit_my_photos">My photos</string>
    <string name="general_search_empty_title">Sorry, no one was found :(</string>
    <string name="general_search_empty_text">You can try to run the search again or change the filter settings.</string>
    <string name="map_title">Map</string>
    <string name="general_buying">Coins and likes purchase</string>
    <string name="popup_version_title">New app version is available</string>
    <string name="popup_version_message">Time to update your app version!</string>
    <string name="leaders_select_photo_info">Select your most impressive photo! You cannot select a photo with a low rating.</string>
    <string name="map_popup_address">Address</string>
    <string name="black_list_info">You\'ve added someone to your Blacklist. You can change this in your profile or in your VIP-status Settings.</string>
    <string name="black_list_activation">Activate your VIP-status and use the Blacklist.</string>
    <string name="buying_total">Total</string>
    <string name="we_dont_detect_your_city">To find people nearby, we need to know where you are. Please indicate your city.</string>
    <string name="confirm_email">Please confirm the email</string>
    <string name="password_sent">New password was sent to your email</string>
    <string name="buy_vip_month_one">%1$d month for %2$.2f %3$@ per month</string>
    <string name="buy_vip_month_few">%1$d months for %2$.2f %3$@ per month</string>
    <string name="buy_vip_month_other">%1$d months for %2$.2f %3$@ per month</string>
    <string name="general_bookmarks_title">Favorites</string>
    <string name="general_no_fans">No fans</string>
    <string name="general_user_bookmarkadd">User added to Favorites</string>
    <string name="settings_invalid_name">The name contains invalid symbols</string>
    <string name="filter_hint">Enter name</string>
    <plurals name="vip_add_more_friends">
        <item quantity="other">Invite %d more friends</item>
        <item quantity="one">Invite %d more friends</item>
    </plurals>
    <plurals name="get_free_money">
        <item quantity="other">%d free coins</item>
        <item quantity="one">%d free coin</item>
    </plurals>
    <string name="pincode_blocking_app">Lock app. login</string>
    <string name="pincode_blocking">Lock</string>
    <string name="pincode_reset">Reset your PIN code</string>
    <string name="pincode_set">Set a PIN code</string>
    <string name="pincode_change">Change your PIN code</string>
    <string name="pincode_delete">Delete PIN code</string>
    <string name="pincode_input_label">Enter PIN code</string>
    <string name="pincode_check_label">Checking the PIN code</string>
    <string name="pincode_change_label">Changing the PIN code</string>
    <string name="pincode_delete_label">Deleting the PIN code</string>
    <string name="pincode_turning_on">Turn on Locking</string>
    <string name="pincode_dont_match">PIN codes don\'t match. Please try again.</string>
    <string name="pincode_wrong">Incorrect PIN code</string>
    <string name="pincode_input">Enter PIN code</string>
    <string name="pincode_input_previous">Enter old PIN code</string>
    <string name="pincode_repeat">Repeat PIN code</string>
    <string name="pincode_forget">Forgot your PIN code?</string>
    <string name="pincode_auth_input">You need to enter your login and password.</string>
    <string name="pincode_will_be_reset">If authorization is successful, all app settings will be reset.</string>
    <plurals name="pincode_interval">
        <item quantity="zero">immediately after closing</item>
        <item quantity="other">%d min</item>
        <item quantity="one">%d min</item>
    </plurals>
    <string name="general_error">ERROR</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete_title">Delete</string>
    <string name="general_dialog_loading">Loading</string>
    <string name="general_fill_button">Fill in</string>
    <string name="general_send_full">Send</string>
    <string name="general_dialog_retry">Retry</string>
    <string name="general_copy_title">Copy</string>
    <string name="general_back">Back</string>
    <string name="general_server_error">Error. Please try again later.</string>
    <string name="general_non_exist_photo_error">Couldn\'t proceed because the photo has been deleted</string>
    <string name="general_data_error">Error. Please try again.</string>
    <string name="general_internet_off">No Internet connection. Please try again.</string>
    <string name="general_msg_copied">Message copied</string>
    <string name="general_spinner_title">Choose an action</string>
    <string name="general_profile_error">Error loading profile</string>
    <string name="general_dbl_all">All</string>
    <string name="general_dbl_unread">Unread</string>
    <string name="general_empty_code_confirmation">Enter confirmation code</string>
    <string name="general_email_success_confirmed">Your email was successfully confirmed</string>
    <string name="general_email_not_confirmed">Email was not confirmed</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_today">Today</string>
    <string name="general_send_button">Send</string>
    <string name="general_boys">Guys</string>
    <string name="general_girls">Girls</string>
    <string name="auth_btn_vk">Vkontakte</string>
    <string name="auth_btn_fb">Facebook</string>
    <string name="edit_selected">Selected</string>
    <string name="edit_name">Name</string>
    <string name="edit_set_as_main">Set as main</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_restore">Restore</string>
    <string name="settings_help">Help</string>
    <string name="settings_about">About</string>
    <string name="rate_popup_title">Please rate our app!</string>
    <string name="rate_popup_set_rate">Rate</string>
    <string name="rate_popup_later">Ask again later</string>
    <string name="rate_popup_cancel">No thanks</string>
    <string name="settings_feedback_email">Enter your email to get a reply from us.</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error_login_password">Incorrect login/password</string>
    <string name="recover_password">Recover password</string>
    <string name="start_communication">Start chatting</string>
    <string name="im_boy">I\'m a guy</string>
    <string name="general_input_email">Enter your email</string>
    <string name="incorrect_locale">If you would like us to read your review, please write it in either Russian or English.</string>
    <string name="general_complain">Complaint</string>
    <string name="notifications">Notifications</string>
    <string name="settings_select_language">Select app language</string>
    <string name="delete_account_will_be_restored_are_you_sure">You are trying to login to a deleted account. The account will be restored after doing so.</string>
    <string name="restore">Restore</string>
    <string name="auth_btn_ok">Odnoklassniki</string>
    <string name="auth_btn_tf">Topface Account</string>
    <string name="birthday">Birthday</string>
    <string name="enter_text">Enter text</string>
    <string name="send_feedback">Send message</string>
</resources>