<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/loNotifications"
            style="@style/WhiteButtonWithSeparator"
            android:text="@string/notifications"/>

        <include
            android:id="@+id/loPreloadPhoto"
            layout="@layout/item_edit_form_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <include
            android:id="@+id/loAccount"
            layout="@layout/item_edit_form_select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/loHelp"
            style="@style/WhiteButtonWithSeparator"
            android:text="@string/settings_help"/>

        <Button
            android:id="@+id/loLanguage"
            style="@style/WhiteButtonWithSeparator"
            android:text="@string/settings_select_language"/>

        <Button
            android:id="@+id/loAbout"
            style="@style/WhiteButtonWithSeparator"
            android:text="@string/settings_about"/>
    </LinearLayout>
</ScrollView>
