<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRedAlert"
        style="@style/RedAlertTextView"
        android:background="@drawable/bg_alert_wrong_password"
        android:text="@string/error_login_password"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/etMail"
                style="@style/TopfaceAuthText"
                android:layout_marginTop="28dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp">

                <EditText
                    android:id="@+id/edPassword"
                    style="@style/TopfaceAuthText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:paddingRight="24dp" />


                <ImageButton
                    android:id="@+id/ivShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/edPassword"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:src="@drawable/ic_eye_normal" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etName"
                style="@style/TopfaceAuthText"
                android:layout_marginTop="28dp"
                android:hint="@string/edit_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/reg_text_view_selector"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="left"
                    android:paddingTop="10dp"
                    android:text="@string/im_boy"
                    android:textColor="#234144"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/reg_text_view_selector"
                    android:drawableRight="@drawable/arrow_down"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/birthday"
                    android:textColor="@color/registration_hint_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnStartChat"
                style="@style/TfRegButtonBlue"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/start_communication"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
