<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvLocale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_locale"
                android:textColor="#8A8A8A"
                android:layout_marginBottom="24dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edText"
                style="@style/FeedbackEditText"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_text"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="false" />

            <TextView
                android:id="@+id/tvEmailTitle"
                style="@style/FeedbackTextView"
                android:text="@string/settings_feedback_email"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edEmail"
                style="@style/FeedbackEditText"
                android:layout_height="34dp"
                android:hint="@string/general_input_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:singleLine="true"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvTransactionIdInfoLink"
                style="@style/FeedbackTextView"
                android:visibility="gone" />

            <Button
                android:id="@+id/sendFeedback"
                style="@style/Widget.Topface.Button.Big.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="24dp"
                android:minHeight="40dp"
                android:minWidth="286dp"
                android:text="@string/send_feedback"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <com.topface.topface.ui.views.LockerView
        android:id="@+id/fbLoadingLocker"
        style="@style/LoadingLocker"
        android:visibility="gone" />

</RelativeLayout>
