<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.topface.topface.ui.RestoreAccountActivity.Handlers"/>

        <variable
            name="toolbarViewModel"
            type="com.topface.topface.ui.views.toolbar.view_models.BaseToolbarViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarInclude"
            layout="@layout/toolbar_view"
            bind:viewModel="@{toolbarViewModel}"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/restore_top_padding"
            android:src="@drawable/ic_profile"/>

        <TextView
            style="@style/MessageRestore"
            android:text="@string/delete_account_will_be_restored_are_you_sure"/>

        <Button
            android:id="@+id/restore_account"
            style="@style/BigStretchedBlueButtonRestore"
            android:onClick="@{handlers::onRestoreClick}"
            android:text="@string/restore"/>

        <Button
            android:id="@+id/cancel_restore"
            style="@style/BigStretchedGrayButtonRestore"
            android:layout_marginTop="@dimen/restore_buttons_padding"
            android:onClick="@{handlers::onCancelClick}"
            android:text="@string/general_cancel"/>
    </LinearLayout>
</layout>
